playseat.com (archived on 2013-12-21)
{
  "alexa_rank": 329036,
  "analysis_subcorpus": true,
  "categories": "business;shopping",
  "char_count": 4633,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.49,
  "homepage_snapshot_redirected_domain": "playseat.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131102032552id_/http://www.playseat.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131102032552id_/http%3A//playseat.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "playseat.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131221083926id_/http%3A//www.playseat.com/playseats-privacy-policy",
  "policy_title": "Privacy | Playseat",
  "policy_url": "playseat.com/playseats-privacy-policy",
  "sha1": "ebfc6e2b0b591320ca718717f3faf955807f2b5f",
  "simhash": 7546225336092545478,
  "simhash_updated": false,
  "site_hostname": "playseat.com",
  "site_url": "http://playseat.com",
  "smog": 13.56,
  "strict_updated": false,
  "timestamp": "20131221083926",
  "word_count": 725,
  "year": 2013
}

--- a/p/pl/pla/playseat.com.html
+++ b/p/pl/pla/playseat.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the playseat.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621235630id_/http%3A//www.playseat.com/playseats-privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the playseat.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221083926id_/http%3A//www.playseat.com/playseats-privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en" dir="ltr" id="html-main" class="js"><head>
   <title>Privacy | Playseat</title>
@@ -9,20 +9,20 @@
 <meta name="robots" content="index,follow">
 <meta name="DC.title" content="Privacy">
 <link rel="shortcut icon" href="/sites/all/themes/playseats/favicon.ico" type="image/x-icon">
-  <link type="text/css" rel="stylesheet" media="all" href="/modules/aggregator/aggregator.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/imagefield/imagefield.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/simplenews/simplenews.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/modules/fieldgroup/fieldgroup.css?5">
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/playseats/mystyle.css?5">
-  <script type="text/javascript" src="/misc/jquery.js?5"></script>
-<script type="text/javascript" src="/misc/drupal.js?5"></script>
+  <link type="text/css" rel="stylesheet" media="all" href="/modules/aggregator/aggregator.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/imagefield/imagefield.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/simplenews/simplenews.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/modules/fieldgroup/fieldgroup.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/playseats/mystyle.css?1">
+  <script type="text/javascript" src="/misc/jquery.js?1"></script>
+<script type="text/javascript" src="/misc/drupal.js?1"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOutgoing": 1, "trackMailto": 1, "trackDownload": 1, "trackDownloadExtensions": "7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip" } });
@@ -30,7 +30,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
 </script>
   
   <script type="text/javascript" src="/sites/all/themes/playseats/newmenu.js"></script></head><body><div id="dropmenudiv" style="visibility:hidden;width:165px;background:" onmouseover="clearhidemenu()" onmouseout="dynamichide(event)"></div>
-<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/playseats/newmenu.css?1">
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/themes/playseats/newmenu.css?4">
 
 
   <script type="text/javascript"> </script>
@@ -46,21 +46,21 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
 
 
 
-<!-- Language switcher --><div class="language-block">Playseat website language:
+<!-- Language switcher --><div class="language-block">Playseat® website language:
 														<select name="language-selectbox" id="language-selectbox" onchange="window.location = this.value">
-																	<option value="/bg">Български</option>
-<option value="/nl">Nederlands</option>
-<option selected="selected" value="/">English</option>
-<option value="/fi">Suomi</option>
-<option value="/fr">Français</option>
-<option value="/de">Deutsch</option>
+																	<option selected="selected" value="/">English</option>
 <option value="/it">Italiano</option>
-<option value="/ru">Русский</option>
+<option value="/de">Deutsch</option>
+<option value="/fr">Français</option>
+<option value="/nl">Nederlands</option>
 <option value="/es">Español</option>
-<option value="/sv">Svenska</option>
-<option value="/chn">简体中文</option>
-<option value="/pl">Polski</option>
 <option value="/pt">Português</option>
+<option value="/pl">Polski</option>
+<option value="/fi">Suomi</option>
+<option value="/sv">Svenska</option>
+<option value="/bg">Български</option>
+<option value="/chn">简体中文</option>
+<option value="/ru">Русский</option>
 														</select>
 						 </div>
 <!-- / Language switcher -->
@@ -100,7 +100,7 @@ jQuery.extend(Drupal.settings, { "basePath": "/", "googleanalytics": { "trackOut
 <div class="block simple-block block-block clear-block" id="block-block-1">
 <div class="content"><script type="text/javascript">
 show_flash('<object type="application/x-shockwave-flash" data="/sites/all/themes/playseats/flash/movie.swf" width="980" height="256" id="movie"><PARAM NAME=FlashVars VALUE="language=en"><param name="allowScriptAccess" value="sameDomain" /><param name="wmode" value="transparent" /><param name="movie" value="/sites/all/themes/playseats/flash/movie.swf" /><param name="quality" value="high" /><param name="bgcolor" value="#ffffff" /><img src="http://www.playseat.com/page_content_files/immagini_alternative_flash/en.jpg" width="980px" height="256px"></object>');</script><object type="application/x-shockwave-flash" data="/sites/all/themes/playseats/flash/movie.swf" width="980" height="256" id="movie"><param name="FlashVars" value="language=en"><param name="allowScriptAccess" value="sameDomain"><param name="wmode" value="transparent"><param name="movie" value="/sites/all/themes/playseats/flash/movie.swf"><param name="quality" value="high"><param name="bgcolor" value="#ffffff"><img src="http://www.playseat.com/page_content_files/immagini_alternative_flash/en.jpg" width="980px" height="256px"></object>
-<a href="http://www.playseat.com/shop/eu/uk/special-promotion.html"><img src="http://www.playseat.com/page_content_files/f2012_banner_drupal.gif" border="0" height="51px" width="979px"></a></div>
+<a href="http://www.playseat.com/shop/" title="Free shipping special promo"><img src="http://www.playseat.com/page_content_files/banner_drupal_free.gif" border="0" height="51px" width="979px"></a></div>
 </div>
 
 <!-- / simple block -->
@@ -186,8 +186,8 @@ show_flash('<object type="application/x-shockwave-flash" data="/sites/all/themes
 <p>We will only use your details and order information, including mailing addresses, email address, and phone number, to fulfill your order and to advise of the status of the order.</p>
 </div>
 	    <div class="links">» <ul class="links inline"><li class="node_translation_fi first"><a href="/fi/yksityisyydensuoja" title="Yksityisyydensuoja" class="translation-link">Suomi</a></li>
-<li class="node_translation_ru"><a href="/ru/playseats-privacy-policy" title="Конфиденциальность" class="translation-link">Русский</a></li>
-<li class="node_translation_sv last"><a href="/sv/playseat-sekretesspolicy" title="Privathet" class="translation-link">Svenska</a></li>
+<li class="node_translation_sv"><a href="/sv/playseat-sekretesspolicy" title="Privathet" class="translation-link">Svenska</a></li>
+<li class="node_translation_ru last"><a href="/ru/playseats-privacy-policy" title="Конфиденциальность" class="translation-link">Русский</a></li>
 </ul></div>  </div>
 
 
@@ -237,13 +237,13 @@ show_flash('<object type="application/x-shockwave-flash" data="/sites/all/themes
 <div class="content">
 <ul class="menu">
 <li class="leaf first"><div class="icon-logitech"><h3><a title="Logitech G25 seat" href="/en/logitech-G27-review">Logitech G27 seat</a></h3><p>Stable wheel support and shifter holder</p></div></li>
-<li class="leaf"><div class="icon-psp"><h3><a title="PS3 Steering wheel PS3" href="/en/ps3-steering-wheel">PS3 Steering wheel</a></h3><p>Playseat gaming chair with the best available steering wheel for PS2 and PS3</p></div></li>
-<li class="leaf"><div class="icon-wii"><h3><a title="WII Steering wheel" href="/en/wii-steering-wheel">WII Steering wheel</a></h3><p>Playseat gaming chair for WII makes it feel like you’re driving a real car</p></div></li>
+<li class="leaf"><div class="icon-psp"><h3><a title="PS3 Steering wheel PS3" href="/en/ps3-steering-wheel">PS3 Steering wheel</a></h3><p>Playseat® gaming chair with the best available steering wheel for PS2 and PS3</p></div></li>
+<li class="leaf"><div class="icon-wii"><h3><a title="WII Steering wheel" href="/en/wii-steering-wheel">WII Steering wheel</a></h3><p>Playseat® gaming chair for WII makes it feel like you’re driving a real car</p></div></li>
 <li class="leaf"><div class="icon-xbox"><h3><a title="XBOX steering wheel" href="/en/xbox-steering-wheel">XBOX steering wheel</a></h3><p>Hand-down the best steering wheel for xbox</p></div></li>
-<li class="leaf"><div class="icon-pc"><h3><a title="PC steering wheel" href="/en/pc-steering-wheel">PC steering wheel</a></h3><p>Check out the best steering wheel for PC and Playseat chairs</p></div></li>
+<li class="leaf"><div class="icon-pc"><h3><a title="PC steering wheel" href="/en/pc-steering-wheel">PC steering wheel</a></h3><p>Check out the best steering wheel for PC and Playseat® chairs</p></div></li>
 <li class="leaf"><div class="icon-fanatec"><h3><a title="Fanatec steering wheel" href="/en/fanatec-steering-wheel">Fanatec steering wheel</a></h3><p>Check out the best professional steering wheels from Fanatec</p></div></li>
 <li class="leaf"><div class="icon-f1wa"><h3><a title="Thrustmaster Ferrari F1 Wheel Integral T500 for PC and PS3" href="http://www.playseat.com/thrustmaster-ferrari-f1-wheel-integral-t500-review">F1 Steering Wheel</a></h3><p>Thrustmaster Ferrari F1 Wheel Integral T500 for PC and PS3</p></div></li>
-<li class="leaf"><div class="icon-joystick"><h3><a title="Flight simulator cockpit" href="/en/flight-simulator-cockpit">Flight simulator cockpit</a></h3><p>Experience the best joystick an the best cockpit Playseat simulator</p></div></li>
+<li class="leaf"><div class="icon-joystick"><h3><a title="Flight simulator cockpit" href="/en/flight-simulator-cockpit">Flight simulator cockpit</a></h3><p>Experience the best joystick an the best cockpit Playseat® simulator</p></div></li>
 </ul>
 </div>
 </div>
@@ -268,9 +268,9 @@ show_flash('<object type="application/x-shockwave-flash" data="/sites/all/themes
 
 <div class="block simple-block block-menu clear-block" id="block-menu-menu-right-menu">
 <div class="content"><ul class="menu"><li class="leaf first"><a href="/games-shops" title="game shop where see playseats gaming chairs">Do you have a Game Shop?</a></li>
-<li class="leaf"><a href="/gaming-seat-dimensions" title="Playseat Measures">Playseat chair specifications</a></li>
+<li class="leaf"><a href="/gaming-seat-dimensions" title="Playseat Measures">Playseat® chair specifications</a></li>
 <li class="leaf"><a href="/car-racing-games" title="The best Car Racing Games for Pc and Console">Car Racing Games</a></li>
-<li class="leaf last"><a href="/playseat-media-kit" title="Media kit for journalist who want review Playseat">Playseat chairs Media Kit</a></li>
+<li class="leaf last"><a href="/playseat-media-kit" title="Media kit for journalist who want review Playseat">Playseat® chairs Media Kit</a></li>
 </ul></div>
 </div>
 
@@ -278,7 +278,7 @@ show_flash('<object type="application/x-shockwave-flash" data="/sites/all/themes
 <!-- simple block -->
 
 <div class="block simple-block block-block clear-block" id="block-block-37">
-<div class="content"><br><img alt="" border="0" src="http://www.playseat.com/page_content_files/logitech_eng.gif" height="76px" width="250px"><center><a target="_blank" href="http://www.logitech.com/en-us/265/6687" rel="nofollow">Logitech suggest Playseat<br>see Logitech website</a></center><br>&nbsp;<br></div>
+<div class="content"><br><img alt="" border="0" src="http://www.playseat.com/page_content_files/logitech_eng.gif" height="85px" width="250px"><center><a target="_blank" href="http://www.logitech.com/en-us/265/6687" rel="nofollow">Logitech suggest Playseat®<br>see Logitech website</a></center><br>&nbsp;<br></div>
 </div>
 
 <!-- / simple block -->
@@ -298,7 +298,7 @@ show_flash('<object type="application/x-shockwave-flash" data="/sites/all/themes
  <input type="text" maxlength="128" name="email" id="edit-email" size="30" value="" class="form-text">
 </div>
 <input type="submit" name="op" id="edit-submit" value="Subscribe!" class="form-submit">
-<input type="hidden" name="form_build_id" id="form-48547a5c5e87c9e1dc3f42a0d5ffee0e" value="form-48547a5c5e87c9e1dc3f42a0d5ffee0e">
+<input type="hidden" name="form_build_id" id="form-38766d0eaec0f004f9a94546519c2db3" value="form-38766d0eaec0f004f9a94546519c2db3">
 <input type="hidden" name="form_id" id="edit-site-helper-subscription-form" value="site_helper_subscription_form">
 
 </div></form>
@@ -347,7 +347,7 @@ show_flash('<object type="application/x-shockwave-flash" data="/sites/all/themes
 <li class="leaf active-trail"><a href="/playseats-privacy-policy" title="Privacy Policy" class="active">Privacy Policy</a></li>
 <li class="leaf"><a href="/playseats-review" title="">Reviews</a></li>
 <li class="leaf"><a href="/stand-logitech-g25" title="Stand Logitech G25">Stand Logitech G27-G25</a></li>
-<li class="leaf last"><a href="/playseat-events">Playseat Events</a></li>
+<li class="leaf last"><a href="/playseat-events">Playseat® events</a></li>
 </ul></div>
 </div>
 
@@ -389,7 +389,7 @@ show_flash('<object type="application/x-shockwave-flash" data="/sites/all/themes
 
 
 
-<div style="height:40px; line-height:40px; color:#FFFFFF; text-align: center; font-size: 11px;">©  2013 Playseat. All Rights Reserved</div>
+<div style="height:40px; line-height:40px; color:#FFFFFF; text-align: center; font-size: 11px;">©  2013 Playseat®. All Rights Reserved</div>
 <a href="https://plus.google.com/114511390801792525967" rel="publisher">Find us on Google+</a>
 
 <!-- / make-it-center --></div>
@@ -400,7 +400,7 @@ show_flash('<object type="application/x-shockwave-flash" data="/sites/all/themes
 
 
 
-  <script type="text/javascript" src="/sites/all/modules/google_analytics/googleanalytics.js?5"></script>
+  <script type="text/javascript" src="/sites/all/modules/google_analytics/googleanalytics.js?1"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
