newcars.com (archived on 2013-12-21)
{
  "alexa_rank": 53725,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 9361,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.94,
  "homepage_snapshot_redirected_domain": "newcars.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20130928095749id_/http://www.newcars.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20130928095749id_/http%3A//newcars.com",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "newcars.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131221103209id_/http%3A//www.newcars.com/privacy",
  "policy_title": "NewCars.com Privacy Policy",
  "policy_url": "newcars.com/privacy",
  "sha1": "1fdcbb7d78ab963f7e7b8beea435505fc46447c3",
  "simhash": 4361974078830228765,
  "simhash_updated": true,
  "site_hostname": "newcars.com",
  "site_url": "http://newcars.com",
  "smog": 16.11,
  "strict_updated": true,
  "timestamp": "20131221103209",
  "word_count": 1502,
  "year": 2013
}

--- a/n/ne/new/newcars.com.html
+++ b/n/ne/new/newcars.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the newcars.com privacy policy that was archived on 2013-06-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130613011636id_/http%3A//www.newcars.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the newcars.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221103209id_/http%3A//www.newcars.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" lang="en" xml:lang="en"><head>
 <title>NewCars.com Privacy Policy</title>
@@ -119,7 +119,7 @@
       <div class="headerFBLogin" id="header_fb_location">
         <div id="fb-root"></div>
         <span id="facebook_login_button"><fb:login-button scope="publish_stream,email,read_stream" show-faces="false" width="200" max-rows="1"></fb:login-button></span>
-        <span id="facebook_profile_picture" style="display: none"><fb:profile-pic uid="loggedinuser" size="thumb" facebook-logo="true"></fb:profile-pic></span>
+        <span id="facebook_profile_picture" style="display: none"><fb:profile-pic uid="loggedinuser" height="35" facebook-logo="true"></fb:profile-pic></span>
       </div>
       <!-- START SCANALERT CODE -->
       <a target="_blank" href="https://www.mcafeesecure.com/RatingVerify?ref=www.newcars.com"><img width="65" height="37" border="0" src="//images.scanalert.com/meter/www.newcars.com/63.gif" alt="McAfee Secure sites help keep you safe from identity theft, credit card fraud, spyware, spam, viruses and online scams"></a>
@@ -249,7 +249,6 @@
 
 
 
-
 <script type="text/javascript" src="http://images.newcars.com/js-libs/prod/video_player/video_player_widget.js"></script>
 <!-- ShareThis -->
 <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script>
@@ -261,7 +260,6 @@ stLight.options({publisher:'add6abb9-0de4-4868-9e48-ef48b4529a42',headerTitle:'S
 <!-- ShareThis -->
 
 <div id="video_popup" style="display:none;"></div>
-
 
 <script type="text/javascript">
 //<![CDATA[
@@ -288,7 +286,7 @@ AutoSearch(document.getElementById('actb_search_box'));
 Favorites.onFavPage                   = false;
 Favorites.Facebook.application_id      = '385774864807732';
 Favorites.Facebook.login_button       = '<fb:login-button scope="publish_stream,email,read_stream" show-faces="false" width="200" max-rows="1">Login with Facebook</fb:login-button>';
-Favorites.Facebook.profile_pic        = '<fb:profile-pic uid="loggedinuser" size="thumb" facebook-logo="true"></fb:profile-pic>';
+Favorites.Facebook.profile_pic        = '<fb:profile-pic uid="loggedinuser" height="35" facebook-logo="true"></fb:profile-pic>';
 Favorites.Facebook.like_button        = '<fb:like href="" layout="button_count" show_faces="true" width="120"></fb:like>';
 Favorites.DropDown.initialize('fav.tab','fav.downarrow');
 Favorites.initialize()
@@ -331,12 +329,10 @@ var s_account="cvennewscars";
 <script type="text/javascript" src="http://images.newcars.com/js/s_code_clven.js"></script>
 <script type="text/javascript">
 s_clven.server="www.newcars.com";
-s_clven.channel="/privacy";
+s_clven.channel="";
 s_clven.pageName='Privacy';
 s_clven.prop1="1";
 s_clven.eVar1="1";
-s_clven.prop7="Dodge";
-s_clven.prop8="Challenger";
 s_clven.eVar32="Bot"; s_clven.eVar40="Walk-in";  s_clven.eVar41="Privacy"; //s_clven.linkTrackVars="events,eVar20";
 s_clven.linkTrackEvents="event6";
 
@@ -359,7 +355,7 @@ if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+
   
 
   // Local 'jsiframe' url to be assigned inline or after page-load
-  Local.js_iframe_url="/page_footer_frame.php?request_id=&vid=1&detid=1001&zip=&make=Dodge&make_id=16&model=Challenger&model_id=2009&key=Walk-in&body=Coupe%2FHatchback&msrp=%2426%2C295&year=2013&page_category=privacy&page_id=22&page_name=Privacy";
+  Local.js_iframe_url="/page_footer_frame.php?request_id=&vid=1&detid=1001&zip=&make=&model=&key=Walk-in&body=&msrp=N%2FA&year=&page_category=privacy&page_id=22&page_name=Privacy";
 
   
   // Function to set the url
