--- a/v/vi/vid/videoeta.com.html
+++ b/v/vi/vid/videoeta.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the videoeta.com privacy policy that was archived on 2013-05-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130524010538id_/http%3A//videoeta.com/about/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the videoeta.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221113828id_/http%3A//videoeta.com/about/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xml:lang="en" lang="en"><head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -18,14 +18,14 @@
 		<link rel="stylesheet" type="text/css" media="all" href="/css/960/reset.css">
 	<link rel="stylesheet" type="text/css" media="all" href="/css/960/text.css">
 	<link rel="stylesheet" type="text/css" media="all" href="/css/960/960.css">
-	<link rel="stylesheet" type="text/css" media="all" href="/css/eta.css?534">
+	<link rel="stylesheet" type="text/css" media="all" href="/css/eta.css?v=5.4.0">
 	<!--[if IE]>
 	<link rel="stylesheet" type="text/css" href="/css/iehacks.css" />
 	<![endif]--> 
 	<link rel="alternate" type="application/rss+xml" title="RSS" href="http://feeds.feedburner.com/videoeta-news">
 	<link href="https://plus.google.com/115432529570358038565" rel="publisher">
 		<title>VideoETA - Privacy Guarantee</title>
-	<script type="text/javascript" async="" src="https://platform.stumbleupon.com/1/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
+	<script type="text/javascript" async="" src="https://platform.stumbleupon.com/1/widgets.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/plusone.js"></script><script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js#xfbml=1"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 	<script src="http://code.jquery.com/jquery-migrate-1.1.1.js"></script>
 	<script>  
 	$(document).ready(function(){  
@@ -52,7 +52,7 @@
 
 	  (function() {
 	    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-	    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+	    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
 	    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	  })();
 
@@ -87,7 +87,8 @@
 <div id="head" class="container_12">
 
 <div class="grid_12">
-<div id="logo"><a href="/"><img src="/images/eta/eta-534.png" width="170" height="132" alt="VideoETA" title="Touch me and I'll take you home"></a></div>
+<div id="logo"><a href="/"><img src="/images/eta/eta-top.png" width="164" height="100" alt="VideoETA" title="Touch me and I'll take you home"></a>
+<p>When Entertainment Happens</p></div>
 
 <div id="login">
 <a href="/about/privacy.html?signin=1">Sign In?</a> | <a href="/signup">Sign Up?</a> | <a href="/about">What is VideoETA?</a>
@@ -100,11 +101,11 @@
 </form>
 </div>
 
-<div id="msg"></div>
+<div id="msg"><a href="/movie/141570/star-wars-episode-vii/">SW7=727</a></div>
 
 <div id="tabs">
 <ul>
-<li><a href="/dvdbd/">DVD &amp; Blu-ray</a></li>
+<li><a href="/dvdbd/">Blu-ray &amp; DVD</a></li>
 <li><a href="/in-theaters/">In Theaters</a></li>
 <li><a href="/games/">Games</a></li>
 <li><a href="/people/">People</a></li>
@@ -208,12 +209,12 @@ to visitor privacy, please contact us via our <a href="/about/contact.html">cont
 <div id="ankle-wrapper">
 <div id="ankle" class="container_16">
 	<div class="grid_4">
-	<h3>Undiscovered Picks</h3>
+	<h3 class="undiscovered">Undiscovered Picks</h3>
 	<p>Upcoming movies worth watching that you may not have heard of.</p>
 	</div>
 	<div class="grid_12" style="padding: 5px 0">
 	<ul>
-	<li><a href="/rap.php?id=1068"><img src="/images/movies/medium/BGP_D358D.jpg" alt="Silver Case"></a></li><li><a href="/rap.php?id=1078"><img src="/images/movies/medium/MBO_DMBFHE053D.jpg" alt="Lore"></a></li><li><a href="/rap.php?id=1084"><img src="/images/movies/medium/MPI_DIFC9852D.jpg" alt="Knife Fight"></a></li><li><a href="/rap.php?id=1102"><img src="/images/movies/medium/KIC_DK872D.jpg" alt="The Giants"></a></li><li><a href="/rap.php?id=1104"><img src="/images/movies/medium/HSP_D670835D.jpg" alt="Fred Won't Move Out"></a></li>	</ul>
+	<li><a href="/rap.php?id=1296" title="Short Term 12"><img src="/images/movies/medium/NVG_D88130051D.jpg" alt="Short Term 12"></a></li><li><a href="/rap.php?id=1272" title="Last Love"><img src="/images/movies/medium/IME_DBVK9715D.jpg" alt="Last Love"></a></li><li><a href="/rap.php?id=1312" title="Freezer"><img src="/images/movies/medium/ANB_DAF61389D.jpg" alt="Freezer"></a></li><li><a href="/rap.php?id=1294" title="Blue Caprice"><img src="/images/movies/medium/MPI_DIFC9897D.jpg" alt="Blue Caprice"></a></li><li><a href="/rap.php?id=1290" title="Una Noche"><img src="/images/movies/medium/MPI_DIFC9896D.jpg" alt="Una Noche"></a></li>	</ul>
 	</div>
 </div>
 </div>
@@ -224,17 +225,17 @@ to visitor privacy, please contact us via our <a href="/about/contact.html">cont
 <div id="foot" class="container_12" style="padding-bottom: 30px">
 
 <div class="grid_2" id="top-news">
-<a href="/news/3766/enders-game-trailer-is-literally-out-of-this-world/"><span>Top News</span>
-<img src="/images/squares/2013/enders_game.jpg" width="100"><h3>'Ender's Game' trailer is literally out of this world</h3></a>
+<a href="/news/4080/divergent-trailer-is-an-intense-ride/"><span>Top News</span>
+<img src="/images/content/people/50x50/3034.jpg" width="100"><h3>'Divergent' trailer is an intense ride</h3></a>
 </div>
 
 <div class="grid_2">
-<h4 style="margin-top: 0"><a href="/dvdbd/">DVD &amp; Blu-ray</a></h4>
+<h4 style="margin-top: 0"><a href="/dvdbd/">Blu-ray &amp; DVD</a></h4>
 <ul>
 	<li><a href="/dvdbd/">This Week's Releases</a></li> 
 	<li><a href="/dvd/top_renters.html">Top Renters</a></li> 
-	<li><a href="/log/?dvd">Just Announced DVD</a></li>
 	<li><a href="/log/?blu-ray">Just Announced Blu-ray</a></li>
+	<li><a href="/log/?dvd">Just Announced DVD</a></li>
 	<li><a href="/dvd/future_tv_on_dvd.html">Future TV on DVD</a></li> 
 	<li><a href="/dvd/mod.html">MOD Releases</a></li>
 </ul>
@@ -314,7 +315,7 @@ to visitor privacy, please contact us via our <a href="/about/contact.html">cont
 
 
 <ul>
-	<li><a href="http://old.videoeta.com" target="_new">OLD SITE DESIGN</a></li>
+	<li><a href="http://old.videoeta.com" target="_new">OLD SITE DESIGN »</a></li>
 	<li><a href="/about">About Us</a></li>
 	<li><a href="/email">Get our Newsletter</a></li>
 	<li><a href="/about/contact.html">Contact Us</a></li>
@@ -323,7 +324,10 @@ to visitor privacy, please contact us via our <a href="/about/contact.html">cont
 	<li><a href="/about/credits.html">Credits</a></li>
 </ul>
 <p class="note">Copyright © 1999-2013 VideoETA, Inc. All Rights Reserved.</p>
+<p class="note">Version 5.4.0</p>
 </div>
+
+<script type="text/javascript" src="http://www.lijit.com/blog_wijits?json=0&amp;id=trakr&amp;uri=http%3A%2F%2Fwww.lijit.com%2Fusers%2Fvideoeta&amp;js=1"></script>
 
 </div>
 </div>
