--- a/m/ml/mlm/mlmleads.com.html
+++ b/m/ml/mlm/mlmleads.com.html
@@ -1,9 +1,10 @@
-<!--The following is the downloaded HTML source of the mlmleads.com privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622233216id_/http%3A//mlmleads.com/home/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mlmleads.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221164935id_/http%3A//www.mlmleads.com/home/privacy.html) for the most accurate reproduction.-->
 
 <html><!-- InstanceBegin template="/Templates/publicworedirect061505.dwt" codeOutsideHTMLIsLocked="true" --><head>
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Privacy Policy</title>
+<title>MLM Leads Privacy Policy</title>
+<meta name="description" content="Buy MLM Leads and Network Marketing Lead at MLMLeads.com.">
 <!-- InstanceEndEditable -->
 <link href="/inc/css/style.css" rel="stylesheet" type="text/css">
 <link href="/inc/css/qformw.css" rel="stylesheet" type="text/css">
@@ -73,9 +74,7 @@
         <tbody><tr>
             <td align="left" valign="top">
 <!-- InstanceBeginEditable name="BodyRegion" -->
-<p>
-<img src="/graphics/titles/pt_privacy.gif" alt="Privacy Policy" width="400" height="24" border="0">
-</p>
+<h1>MLM Leads Privacy Policy</h1>
 
 <p> MLMLeads.com is committed to customer service and we intend to continue that
   tradition by providing a private and secure browsing experience at MLMLeads.com.
@@ -132,7 +131,19 @@
   of each and every web site that collects personally identifiable information.
   This privacy statement applies solely to information collected by this web site.
 </p>
-<p></p>
+<p><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-33736042-1']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script></p>
 <!-- InstanceEndEditable --></td>
         </tr>
         </tbody></table><br>
@@ -147,17 +158,17 @@
 <tbody><tr>
     <td align="center" valign="middle" nowrap="">
         <p>
-        <a href="/">Home</a> |
-       <a href="/order/index.html">Order</a> |
-        <a href="/home/affiliate.html">Affiliate</a> |
-        <a href="/home/training.html">Training</a> |
-        <nobr><a href="/home/contact.html">Contact Us</a></nobr> |
-        <nobr><a href="/account/index.html">My Account</a></nobr><br>
-        <nobr><a href="/home/privacy.html">Privacy Policy</a></nobr> |
-        <nobr><a href="/home/tos.html">Terms of Service</a></nobr>
+        <a href="/" title="mlm leads">Home</a> |
+       <a href="http://www.mlmleads.com/mlm-leads/order/indexdefault.html" title="order mlm leads">Order</a> |
+        <a href="/home/affiliate.html" title="mlm leads affiliate marketing">MLM Affiliate</a> |
+        <a href="/home/training.html" title="mlm leads training for mlm leads prospecting">MLM  Training</a> |
+        <nobr><a href="/home/contact.html" title="mlm leads consultation">Contact Us</a></nobr> |
+        <nobr><a href="/account/index.html" title="mlm leads login">My Account</a></nobr><br>
+        <nobr><a href="/home/privacy.html" title="mlm leads privacy policy">Privacy Policy</a></nobr> |
+        <nobr><a href="/home/tos.html" title="mlm leads terms of service">Terms of Service</a></nobr>
         </p>
         <p>
-        © Copyright MLMLeads, 2012.  All Rights Reserved.
+        © Copyright MLMLeads, 2013.  All Rights Reserved.
         </p></td>
 </tr>
 </tbody></table></div>
