--- a/p/po/pow/poweruphosting.com.html
+++ b/p/po/pow/poweruphosting.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the poweruphosting.com privacy policy that was archived on 2013-06-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130620152857id_/http%3A//poweruphosting.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the poweruphosting.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221185912id_/http%3A//poweruphosting.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
