--- a/i/in/ins/insound.com.html
+++ b/i/in/ins/insound.com.html
@@ -1,8 +1,9 @@
-<!--The following is the downloaded HTML source of the insound.com privacy policy that was archived on 2013-06-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130619033727id_/http%3A//www.insound.com/privacy-statement) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the insound.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221204507id_/http%3A//www.insound.com/privacy-statement) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
-	<script id="facebook-jssdk" async="" src="//connect.facebook.net/en_US/all.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script>window.IsUserLoggedIn = false;</script>
+
+	<script id="facebook-jssdk" src="//connect.facebook.net/en_US/all.js"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script>window.IsUserLoggedIn = false;</script>
 	<script src="//cdn.optimizely.com/js/113924829.js"></script>
 
 	<title>Insound.com: Online Record Store for Vinyl Records, Turntables, Band Shirts, Band Posters and more.</title>
@@ -14,15 +15,15 @@
 	<meta name="keywords" content="insound, insound.com, online record store, vinyl records, vinyl, music store, indie music store, band merch, turntables, headphones, CDs, MP3s, band posters, band shirts, rock, indie rock, pop, indie pop, hip hop, rap, rock, electronic, folk, metal">
 	<meta property="fb:page_id" content="145230560359">
 
-		<meta name="description" content="Online record store selling vinyl records, turntables, band shirts, band posters, headphones and so much more. - Insound.com">
-	
-		<!-- CSS -->
-	<link rel="stylesheet" type="text/css" href="/css/alltogether.min.css?v=20130618">
+	<meta name="description" content="Online record store selling vinyl records, turntables, band shirts, band posters, headphones and so much more. - Insound.com">
+
+	<!-- CSS -->
+	<link rel="stylesheet" type="text/css" href="/css/alltogether.min.css?v=20131214">
 	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
 	
 	<!--[if lt IE 9]>
-	<link rel="stylesheet" href="css/ie.css">
-	<![endif] -->		<!--[if lt IE 9]>
+	<link rel="stylesheet" href="/css/ie.css">
+	<![endif] -->	<!--[if lt IE 9]>
 	<script src="/js/html5.js"></script>
 	<![endif]-->
 	
@@ -32,10 +33,10 @@
 	<script>
 		!window.jQuery && document.write('<script src="/js/jquery-1.8.3.min.js"><\/script>');
 	</script><script src="/js/jquery-1.8.3.min.js"></script>
-	<script src="/js/alltogether.min.js?v=20130618"></script>
+	<script src="/js/alltogether.min.js?v=20131214"></script>
 	<script src="//platform.twitter.com/anywhere.js?id=3sNPoMK00qLCpGaWxHKNQ&amp;v=1"></script>
 	
-		<script src="//partner.googleadservices.com/gampad/google_service.js"></script>
+	<script src="//partner.googleadservices.com/gampad/google_service.js"></script>
 
 	<script type="text/javascript">
 		GS_googleAddAdSenseService("ca-pub-8413762963954749");
@@ -54,19 +55,21 @@
 		
 		_gaq.push(['_setAccount', 'UA-211764-1']);
 		
-								//_gaq.push(['_setCustomVar',2,'Registration Status','Not Registered',2]);
+		//_gaq.push(['_setCustomVar',2,'Registration Status','Not Registered',2]);
+
+		_gaq.push(['_trackPageview']);
 		
-				_gaq.push(['_trackPageview']);
-				
 		_gaq.push(['_trackPageLoadTime']);
 		
-  		  		(function() {
+  		(function() {
     		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
     		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   		})();
-  			</script>	
+  		
+	</script>	
 	<link href="https://plus.google.com/117855209302060458314" rel="publisher">
+
 
 </head>
 
@@ -85,13 +88,13 @@
 			});
 		};
 		// Load the SDK Asynchronously
-		(function(d){
-			var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
-			if (d.getElementById(id)) {return;}
-			js = d.createElement('script'); js.id = id; js.async = true;
+		(function(d, s, id) {
+			var js, fjs = d.getElementsByTagName(s)[0];
+			if (d.getElementById(id)) return;
+			js = d.createElement(s); js.id = id;
 			js.src = "//connect.facebook.net/en_US/all.js";
-			ref.parentNode.insertBefore(js, ref);
-		}(document));
+			fjs.parentNode.insertBefore(js, fjs);
+		}(document, 'script', 'facebook-jssdk'));
 
 		function fb_login() {
 			FB.getLoginStatus(function(response) {
@@ -246,6 +249,7 @@
 						<li class="dropdown" id="menu3">
 							<a class="dropdown-toggle" data-toggle="dropdown" href="#menu3">Other&nbsp;Merch&nbsp;<img src="http://assets.insound.com/images/arrow_updown2.png"></a>
 							<ul class="dropdown-menu">
+								<li><a href="/cool-stuff/dvds/">DVDs</a></li>
 								<li><a href="/books/">Books</a></li>
 								<li><a href="/cool-stuff/hats/">Hats</a></li>
 								<li><a href="/cool-stuff/bags/">Bags</a></li>
@@ -286,7 +290,13 @@
 <div id="content-body" class="container-fluid">
 
 			<div class="sitewide-promo">
-			<h3 class="yellow-background">We're now offering FREE ground shipping on US orders over $150!</h3>		</div>
+			<div class="highlight_box">
+<div class="row-fluid">
+<div class="span612">
+<h3 class="yellow-background promo-box full-box"><a onclick="_gaq.push(['_trackPageview', '/sitewide-promo/1396']);" href="http://www.insound.com/holidays/">Insound does the holidays! Click here to check out all of our promotions.</a></h3>
+</div>
+</div>
+</div>		</div>
 		
 	<div class="row-fluid">
 
@@ -658,6 +668,7 @@
 					<ul>
 						<li><a href="/cool-stuff/bags/">Bags</a></li>
 						<li><a href="/cool-stuff/hats/">Hats</a></li>
+						<li><a href="/cool-stuff/dvds/">DVDs</a></li>
 						<li><a href="/books/">Books</a></li>
 						<li><a href="/cool-stuff/jewelryaccessories/">Jewelry/Accessories</a></li>
 						<li><a href="/cool-stuff/">Miscellaneous</a></li>
@@ -743,6 +754,7 @@
 				<b>Merch</b><br>
 					<a href="/shirts/">Shirts</a><br>
 					<a href="/posters/">Posters</a><br>
+					<a href="/cool-stuff/dvds/">DVDs</a><br>
 					<a href="/books/">Books</a><br>
 					<a href="/cool-stuff/hats/">Hats</a><br>
 					<a href="/cool-stuff/bags/">Bags</a><br>
@@ -794,6 +806,22 @@ _qoptions={
 qacct:"p-ebbcirirmLIVk"
 };
 </script>
+
+<!-- Google Code for Remarketing Tag -->
+<script type="text/javascript">
+/* <![CDATA[ */
+var google_conversion_id = 1045385279;
+var google_custom_params = window.google_tag_params;
+var google_remarketing_only = true;
+/* ]]> */
+</script>
+<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
+</script>
+<noscript>
+<div style="display:inline;">
+<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1045385279/?value=0&amp;guid=ON&amp;script=0"/>
+</div>
+</noscript>
 
 
 
