--- a/e/eu/eur/eurosport.co.uk.html
+++ b/e/eu/eur/eurosport.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the eurosport.co.uk privacy policy that was archived on 2013-06-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130628215852id_/http%3A//info.yahoo.com/privacy/uk/yahoo) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the eurosport.co.uk privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221205844id_/http%3A//info.yahoo.com/privacy/uk/yahoo) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 		<title>Yahoo! Privacy Centre</title>
@@ -15,9 +15,40 @@
 	<body>
 		<div id="container">
 
-<script type="text/javascript" src="http://yui.yahooapis.com/3.2.0/build/yui/yui-min.js"></script><link type="text/css" rel="stylesheet" href="http://l.yimg.com/zz/combo?kx/ucs/uh/css/291/yunivhead-min.css&amp;kx/ucs/uh/css/221/logo-min.css&amp;kx/ucs/avatar/css/17/avatar-min.css&amp;kx/ucs/notif_v2/css/145/notifications_v2-min.css&amp;kx/ucs/mailcount/css/39/mailcount_v2-min.css&amp;kx/ucs/mailcount/css/37/mail_preview-min.css&amp;kx/ucs/search/css/190/search_all-min.css&amp;kx/ucs/search/css/190/search_buttons-min.css&amp;kx/ucs/breakingnews/css/12/breaking_news-min.css"><style>#yuhead-bd #yuhead-search #yuhead-sform-cont form .yucs-search-field {height:22px;}
-#yuhead-bd #yuhead-search {width:50%;}
-#yUnivHead #yuhead-hd ul li {background-image: none;}</style><div id="yUnivHead" class="yucs-en-us" data-lang="en-us" data-property="privacy" data-flight="1372456732" data-uhvc="/">        <a href="#yuhead-search" class="yucs-skipto-search yucs-activate">Skip to search.</a>        <div id="yuhead-hd" class="yuhead-clearfix">        <div id="yuhead-mepanel-cont">            <ul id="yuhead-mepanel" class="yucs-toolbar yucs-activate" aria-label="User Services"><li class="yuhead-me yuhead-nodivide yuhead-nopad">    <a class="yuhead-signup" href="https://edit.yahoo.com/config/eval_register?.src=legal&amp;.intl=us&amp;.lang=en-US&amp;.done=http://info.yahoo.com/privacy/uk/yahoo/" target="_top" rel="nofollow">    <em>New User?</em> Register</a></li><li class="yuhead-me">        <a href="https://login.yahoo.com/config/login?.src=legal&amp;.intl=us&amp;.lang=en-US&amp;.done=http://info.yahoo.com/privacy/uk/yahoo/" target="_top" rel="nofollow">    <em>Sign In</em></a></li><li class="yuhead-me"><a href="http://help.yahoo.com/l/us/yahoo/privacy/" rel="nofollow" target="_top">Help</a></li></ul>                                </div>        <div id="yuhead-promo"><a href="http://www.yahoo.com/bin/set/?ilc=37" target="_top" rel="nofollow">Make Y! My Homepage<abbr title="Yahoo!"></abbr></a></div>        <div id="yuhead-com-links-cont">            <ul id="yuhead-com-links" class="yucs-toolbar yucs-activate" aria-label="Yahoo! Services">                <li class="yucs-notifications yucs-notif-activate yuhead-com-link-item  yucs-wait">    <a class="ynotif-control yltasis" href="#" rel="nofollow" aria-haspopup="true" title="Notifications" aria-label="notifications" role="button"><span class="sp ynotif-ico-bell"></span><span class="ynotif-notif-count-con hide"><span class="ynotif-notif-count"></span></span>&nbsp;</a>    <div class="yucs-notif-panel hide" data-ylt-bell="/" data-ylt-profile="/" data-ylt-app="/" data-ylt-cta="/" data-ylt-pageurl="/" data-ylt-signin-cta="/" data-guid="" data-crumb="" data-mode="2" data-pagesize="10" data-view-more-txt="View More" data-notif-user="A Yahoo! user" data-intl="en-us" data-yql-env="" data-settings-tooltip="Settings" data-app-aria-txt="App Icon" data-view-all-txt="See All Notifications" data-view-url="http://pulse.yahoo.com/y/notifications" data-no-items-txt="There are currently no items." data-no-notif-txt="You have no notifications." data-notif-error-txt="Notifications with errors:" data-get-notif-txt="Receive notifications when you comment or discuss content with friends on Yahoo!" data-try-notif-txt="Learn more" data-try-notif-link="http://help.yahoo.com//l/us/yahoo/comments/notifications/pnotification-03.html" data-ylt-try-notif="/" data-loading-txt="Loading..." data-error-unavail-txt="Notifications are temporarily unavailable. Please try again later." data-middleauth-nonotif-text="You have no new notifications." data-password-verify-text="Please verify your password to view notifications." data-authstate="signedout" data-signedout-cta-text="Sign In" data-popup-login-url="https://login.yahoo.com/config/login_verify2?.pd=c%3DOIVaOGq62e5hAP8Tv..nr5E3&amp;.src=sc" data-signedout-message="Sign in to view notifications." data-middleauth-text="You have new notifications.">        <div class="yucs-notif-title-bar yuhead-clearfix">            <span class="yucs-notif-panel-title">Notifications</span>             <a target="_blank" href="http://help.yahoo.com/l/us/yahoo/comments/notifications" class="yucs-notif-tools">Help</a>        </div>        <ul class="yucs-notif-items-panel" role="menu">        </ul>    </div></li>                <li class="yuhead-com-link-item yucs-mailpreview-ancestor">    <a class="sp yltasis yuhead-ico-mail" href="http://mail.yahoo.com/?.intl=us&amp;.lang=en-US" rel="nofollow" target="_top">Mail</a><ul class="yucs-mail-preview-panel hide" data-uri-scheme="http" data-uri-path="ucs.query.yahoo.com/v1/console/yql" data-mail-txt="Mail" data-mail-view="View all Yahoo! Mail" data-mail-help-txt="Help" data-mail-help-url="http://help.yahoo.com/l/us/yahoo/mail/ymail/" data-mail-loading-txt="Loading..." data-languagetag="en-us" data-authstate="signedout" data-middleauth-signin-text="Click here to view your mail" data-popup-login-url="https://login.yahoo.com/config/login_verify2?.pd=c%3DOIVaOGq62e5hAP8Tv..nr5E3&amp;.src=sc" data-middleauthtext="You have {count} new mail." data-yltmessage-link="http://mrd.mail.yahoo.com/msg?mid={msgID}&amp;fid=Inbox" data-yltviewall-link="http://mail.yahoo.com/" data-yltpanelshown="/"></ul></li><li class="yuhead-com-link-item">    <a href="http://my.yahoo.com" rel="nofollow" target="_top">   My Y!    </a></li><li id="yuhead-com-home"><a class="sp yuhead-ico-home" href="http://www.yahoo.com/" rel="nofollow" target="_top">Yahoo!</a></li>            </ul>        </div>    </div>    <div id="yuhead-bd" class="yuhead-clearfix">        <div class="yuhead-logo">   <style>      .yuhead-logo h2{        width:248px;        height:32px;        background-image:url(http://l.yimg.com/rz/uh/logo/newpurple/PNGs-optimized/privacy-us-3074.png);        _background-image:url(http://l.yimg.com/rz/uh/logo/newpurple/compositeGIFs-optimized/privacy-us-3074.gif);      }      .yuhead-logo a{        width:248px;        height:32px;      }      .yuhead-logo div.yuhead-comarketing {       width:248px;      }         </style>   <h2>      <a href="http://info.yahoo.com/privacy/us/yahoo/details.html" target="_top" tabindex="-1">         Yahoo! Privacy      </a>   </h2>   <!-- comarketing component --></div>        <div id="yuhead-search">        <div id="yuhead-sform-cont" class="yuhead-s-web yuhead-search-form">        <form role="search" class="yucs-search yucs-activate" target="_top" action="http://search.yahoo.com/search" method="get"><table role="presentation">   <tbody role="presentation"><tr role="presentation"><td class="yucs-form-input" role="presentation"> <label for="yuhead-sform-searchfield">     <span>Search</span>             </label>                 <input autocomplete="off" type="text" class="sp yuhead-ico-mglass yuhead-search-hint yucs-search-field" name="p" data-sh="Search" data-satype="rich" data-gosurl="" id="yuhead-sform-searchfield" data-pubid=""></td><td nowrap="" class="yucs-form-btn" role="presentation"><div class="yucs-btn-wrap">    <button class="yucs-sweb-btn" type="submit">Search Web</button></div>            </td>         </tr>        </tbody></table><input type="hidden" id="fr" name="fr" value="ush-privacy"><!-- desktop device --></form>            </div>    </div>        <div id="yucs-bnews" class="yucs-activate slide hide" data-linktarget="_top" data-authstate="signedout" data-lang="en-us" data-property="privacy">        <h3>        <span class="title">Breaking News</span>        <a class="genericlink hide" href="http://news.yahoo.com">Visit Yahoo! News for the latest.</a>     </h3>    <span class="close">×<span class="offscreen">Close this window</span></span>     <p class="container">    </p>    </div>    </div>                    <!-- s2s -->    <!-- desktop device -->                 </div><script type="text/javascript" charset="utf-8"> YUI().use('node','event','event-mouseenter','substitute','oop','node-focusmanager','node', 'event', 'querystring-stringify','node', 'event', 'querystring-stringify', 'node-focusmanager', 'cookie', 'substitute', 'json','node','event','gallery-jsonp','node','event','event-custom','event-valuechange','classnamemanager','node','event','cookie','node', function(Y) {});</script><script type="text/javascript" src="http://l.yimg.com/zz/combo?kx/ucs/sts/js/442/skip-min.js&amp;kx/ucs/uh/js/279/timestamp_library-min.js&amp;kx/ucs/menu_utils/js/164/menu_utils_v2-min.js&amp;kx/ucs/uh/js/267/aria_toolbar-min.js&amp;kx/ucs/username/js/42/user_menu-min.js&amp;kx/ucs/help/js/41/help_menu-min.js&amp;kx/ucs/utility_link/js/20/utility_menu-min.js&amp;kx/ucs/uh/js/262/logo_debug-min.js&amp;kx/ucs/common/js/131/jsonp-super-cached-min.js&amp;kx/ucs/avatar/js/23/avatar-min.js&amp;kx/ucs/common/js/131/jsonp-cached-min.js&amp;kx/ucs/notif_v2/js/177/notifications_bootstrap-min.js&amp;kx/ucs/mailcount/js/68/mailcount_v2-min.js&amp;kx/ucs/common/js/1/setup-min.js&amp;kx/ucs/search/js/224/search-min.js&amp;kx/ucs/search/js/210/search_text_dir-min.js&amp;kx/ucs/common/js/133/jsonp-cached-min.js&amp;kx/ucs/breakingnews/js/24/breaking_news-min.js&amp;kx/ucs/uh/js/286/activate_library-min.js"></script>
+<!-- spaceId: 967495883 --><style type="text/css"><!--@import url("http://us.a2.yimg.com/us.yimg.com/lib/hdr/ygma_2.19.css");bodymargin:0px 4px;--></style>
+
+<div id="ygma" style="width:865px"><!-- for 2008 templates -->
+<div id="ygmacx">
+
+<div id="ygmatop">
+<ul id="ygnav">
+<li><a href="http://uk.yahoo.com/" target="_top">Yahoo</a></li>
+<li><a href="http://uk.my.yahoo.com/" target="_top">My Yahoo</a></li>
+<li><a href="http://uk.mail.yahoo.com/" target="_top">Mail</a></li>
+</ul><!-- ygnav -->
+<form id="ygmafrm" name="yhdr_form" action="http://uk.search.yahoo.com" target="_blank">
+<fieldset>
+<legend>Yahoo Search</legend>
+<label for="ygsp">Search the web</label>
+<input type="text" id="ygsp" name="p" size="35" maxlength="100" title="Search">
+<input class="ygbt" type="submit" value="Search" title="Search">
+<input type="hidden" id="uk" name="uk" value="ush-uk-legal">
+</fieldset>
+</form>
+</div><!-- ygmatop -->
+
+<div id="ygmabot">
+<a id="ygmalogo" href="http://privacy.yahoo.com/privacy/uk/">
+<img src="http://l.yimg.com/rz/d/yahoo_en-GB_f_p_350x40.png" width="350" height="40" border="0" alt="Yahoo Privacy">
+</a>
+<ul id="ygmahelp">
+<li class="ygfirst"><a href="http://www.yahoo.co.uk" target="_top">Yahoo</a></li>
+<li class="yglast"><a href="http://help.yahoo.com/uk" target="_top">Help</a></li>
+</ul>
+</div><!-- ygmabot -->
+
+</div><!-- ygmacx -->
+</div><!-- ygma -->
 			<!-- Begin Top Nav -->
          <div id="nav">
             <ul class="menu">
@@ -204,7 +235,7 @@ Copyright © <!-- -->2013<!-- --> Yahoo! All Rights Reserved.<br><br>
 				</div><!-- id="footer" -->
 			</div><!-- id="content" -->
 		</div><!-- id="container" -->
-<!-- Yahoo! Web Analytics - All rights reserved -->
+<!-- Yahoo Web Analytics - All rights reserved -->
 <script type="text/javascript" src="http://d.yimg.com/mi/ono/ywa.js"> </script>
 <script type="text/javascript">
 var YWATracker = YWA.getTracker("1000717864956");
@@ -214,7 +245,7 @@ YWATracker.submit();
 <div><img src="http://o.analytics.yahoo.com/p.pl?a=1000717864956&amp;js=no" width="1"
 height="1" alt="" /></div>
 </noscript>
-<!-- End of Yahoo! Web Analytics Code -->	
+<!-- End of Yahoo Web Analytics Code -->	
 
-<!-- w4.help.bf1.yahoo.com uncompressed/chunked Fri Jun 28 14:58:52 PDT 2013 -->
+<!-- loraxw04.cc.gq1.yahoo.com uncompressed/chunked Sat Dec 21 12:58:44 PST 2013 -->
 </body></html>
