donttrack.us (archived on 2013-12-21)
{
  "alexa_rank": 100256,
  "analysis_subcorpus": true,
  "categories": "business;informationtech;searchenginesandportals",
  "char_count": 12488,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.32,
  "homepage_snapshot_redirected_domain": "donttrack.us",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131001234447id_/http://donttrack.us/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131001234447id_/http%3A//donttrack.us",
  "interval": "2013_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "duckduckgo.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131221210521id_/https%3A//duckduckgo.com/privacy",
  "policy_title": "DuckDuckGo Privacy",
  "policy_url": "duckduckgo.com/privacy",
  "sha1": "a95fc282cadfeb13830ea688f7ced793bc7a3ae1",
  "simhash": 12692510995773894594,
  "simhash_updated": true,
  "site_hostname": "donttrack.us",
  "site_url": "http://donttrack.us",
  "smog": 11.98,
  "strict_updated": true,
  "timestamp": "20131221210521",
  "word_count": 2154,
  "year": 2013
}

--- a/d/do/don/donttrack.us.html
+++ b/d/do/don/donttrack.us.html
@@ -1,20 +1,23 @@
-<!--The following is the downloaded HTML source of the donttrack.us privacy policy that was archived on 2013-06-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130601104024id_/https%3A//duckduckgo.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the donttrack.us privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221210521id_/https%3A//duckduckgo.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en_US"><!--<![endif]--><head>
     <link rel="canonical" href="https://duckduckgo.com/privacy">
 
-<link rel="stylesheet" href="/s559.css" type="text/css">
-<script type="text/javascript" src="/locales/en_US/LC_MESSAGES/duckduckgo-duckduckgo+sprintf+gettext+locale-simple.20130508.082254.js"></script>
-<script type="text/javascript" src="/d973.js"></script>
+<link rel="stylesheet" href="/s608.css" type="text/css">
+<script type="text/javascript" src="/locales/en_US/LC_MESSAGES/duckduckgo-duckduckgo+sprintf+gettext+locale-simple.20131026.164123.js"></script>
+<script type="text/javascript" src="/d1051.js"></script>
 
 <link title="DuckDuckGo" type="application/opensearchdescription+xml" rel="search" href="/opensearch_ssl.xml">
-<link rel="image_src" href="/assets/logo_homepage.normal.v101.png">
 
 <meta http-equiv="content-type" content="text/html; charset=UTF-8;charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 <meta name="HandheldFriendly" content="true">
+
 <meta name="apple-mobile-web-app-capable" content="yes">
+<!--link rel="icon" href="/assets/ddg-icon-256x160.png" type="image/png"-->
+<link rel="image_src" href="/assets/logo_homepage.normal.v101.png">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="/assets/logo_icon128.v101.png">
 
 <link title="DuckDuckGo" type="application/opensearchdescription+xml" rel="search" href="/opensearch_ssl.xml">
@@ -64,20 +67,23 @@
 				   <div id="header_button_menu_wrapper">
 				    <a class="header_button_menu_item" id="header_button_menu_title" href="javascript:;">More</a>
 					 <ul id="header_button_menu" class="grp_modal">
-					 	<li><a href="/about" tabindex="-1">About</a></li>
-<li><a href="/settings" tabindex="-1">Settings</a></li>
-<li><a href="/goodies" tabindex="-1">Goodies</a></li>
-<li><a href="/feedback" tabindex="-1">Help</a></li>
+					 	<li><a href="/about/" tabindex="-1">About</a></li>
+<li><a href="/settings/" tabindex="-1">Settings</a></li>
+<li><a href="/goodies/" tabindex="-1">Goodies</a></li>
+<li><a href="/feedback/" tabindex="-1">Help</a></li>
+<li><a href="/press/" tabindex="-1">Press</a></li>
 <li class="more_menu_header header_button_menu_header">PRIVACY&nbsp;&nbsp;&nbsp;&nbsp;</li>
-<li><a href="/privacy" tabindex="-1">Policy</a></li>
+<li><a href="/privacy/" tabindex="-1">Policy</a></li>
 <li><a href="http://donttrack.us/" tabindex="-1">DontTrack</a></li>
 <li><a href="http://dontbubble.us/" tabindex="-1">DontBubble</a></li>
 <li><a href="http://whatisdnt.com/" tabindex="-1">WhatIsDNT</a></li>
 <li><a href="http://fixtracking.com/" tabindex="-1">FixTracking</a></li>
-<li class="more_menu_header header_button_menu_header">GET&nbsp;INVOLVED&nbsp;&nbsp;&nbsp;&nbsp;</li>
+<li class="more_menu_header header_button_menu_header">GET INVOLVED&nbsp;&nbsp;&nbsp;&nbsp;</li>
+<li><a href="http://dukgo.com/forum" tabindex="-1">Discuss</a></li>
 <li><a href="http://duckduckhack.com/" tabindex="-1">Develop</a></li>
-<li><a href="https://dukgo.com/" tabindex="-1">Translate</a></li>
+<li><a href="https://dukgo.com/translate" tabindex="-1">Translate</a></li>
 <li><a href="/supportus" tabindex="-1">Support Us</a></li>
+
 					 </ul>
 					</div>
 				  </li>
