makestickers.com (archived on 2013-12-21)
{
  "alexa_rank": 392906,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 2999,
  "classifier_probability": 0.83,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.44,
  "homepage_snapshot_redirected_domain": "makestickers.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20131002115935id_/http://www.makestickers.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20131002115935id_/http%3A//makestickers.com",
  "interval": "2013_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "makestickers.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20131221233230id_/http%3A//www.makestickers.com/Privacy.aspx",
  "policy_title": "",
  "policy_url": "makestickers.com/Privacy.aspx",
  "sha1": "54f0b908b1c3bae70e540b3ce616637e08c62af6",
  "simhash": 14409335269854653482,
  "simhash_updated": true,
  "site_hostname": "makestickers.com",
  "site_url": "http://makestickers.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20131221233230",
  "word_count": 512,
  "year": 2013
}

--- a/m/ma/mak/makestickers.com.html
+++ b/m/ma/mak/makestickers.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the makestickers.com privacy policy that was archived on 2013-06-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130621141340id_/http%3A//www.makestickers.com/Privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the makestickers.com privacy policy that was archived on 2013-12-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131221233230id_/http%3A//www.makestickers.com/Privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns:fb="http://ogp.me/ns/fb#"><head id="ctlHeader"><title>
 
@@ -16,7 +16,7 @@
     })(); 
  
 </script>
-<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css"><link rel="icon" type="image/png" href="/favicon.ico">
+<link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css"><link rel="icon" type="image/png" href="/favicon.ico">
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script type="text/javascript">
 
@@ -42,7 +42,7 @@
     
     <meta name="description" content="Read the Graphicsland Privacy Statement.">
     <meta name="keywords" content="Privacy Statement, Privacy Policy">
-<link href="/css/MakeStickers.min.2013060716.css" rel="stylesheet" type="text/css"><link href="/css/global.mash.min.2013060716.css" rel="stylesheet" type="text/css"><script type="text/javascript" src="/scripts/NetsignsSharedScripts.min.2013060716.js"></script><script type="text/javascript" src="/scripts/jquery.social.media.tabs.1.5.2013060716.js"></script><script type="text/javascript" src="/scripts/jquery.tipsy.2013060716.js"></script><script type="text/javascript" src="//apis.google.com/js/plusone.js"></script><meta name="copyright" content="Copyright © 2013 Graphicsland, Inc."></head>
+<link href="/css/MakeStickers.min.2013091915.css" rel="stylesheet" type="text/css"><link href="/css/global.mash.min.2013091915.css" rel="stylesheet" type="text/css"><script type="text/javascript" src="/scripts/NetsignsSharedScripts.min.2013091915.js"></script><script type="text/javascript" src="/scripts/jquery.social.media.tabs.1.5.2013091915.js"></script><script type="text/javascript" src="/scripts/jquery.tipsy.2013091915.js"></script><script type="text/javascript" src="//apis.google.com/js/plusone.js"></script><meta name="copyright" content="Copyright © 2013 Graphicsland, Inc."></head>
 <body id="MakeStickers">   <!-- Which (sub)affiliate? -->
     
         <div id="cyber-monday"></div>
