--- a/h/ho/hom/homesecuritystore.com.html
+++ b/h/ho/hom/homesecuritystore.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the homesecuritystore.com privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622033611id_/http%3A//www.homesecuritystore.com/t-privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the homesecuritystore.com privacy policy that was archived on 2013-12-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222030308id_/http%3A//www.homesecuritystore.com/t-privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -27,10 +27,20 @@
   <!--Customer is not an installer.-->
   
 <!--Default Scripts-->
-  	<script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript" async="" src="https://www.googlecommerce.com/trustedstores/gtmp_compiled.js"></script><script src="/jscripts/jquery-1.4.2.min.js" type="text/javascript"></script>
+  	<script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript" async="" src="https://www.googlecommerce.com/trustedstores/gtmp_compiled.js"></script><script type="text/javascript" async="" src="https://adf5c3ee4e5b2dc1f75f-2732b654ed36f251cb4a4a5472567f49.ssl.cf2.rackcdn.com/gascript.js"></script><script src="/jscripts/jquery-1.4.2.min.js" type="text/javascript"></script>
 	<script src="/jscripts/jquery.watermarkinput.js" type="text/javascript"></script>
 	<script src="/jscripts/Our.js" type="text/javascript"></script>
-    
+   <script type="text/javascript">
+		    //Google Analytics Tracking Enhancer - ROI Revolution
+		    var _roiq=[];var _gaq={push:function(){var a;for(a=0;a<arguments.length;a++){_roiq.push(arguments[a])}}};var _gat={trackingObjects:{},_createTracker:function(a,b){return new _gat.Tracker(a,b)},_getTracker:function(a){return _gat._createTracker(a)},_getTrackerByName:function(a){var a=a||"";if(_gat.trackingObjects.hasOwnProperty(a)){return _gat.trackingObjects[a]}return _gat._createTracker("UA-5793289-2",a)},_anonymizeIp:function(){_gaq.push("_gat._anonymizeIp")},_forceSSL:function(){_gaq.push("_gat._forceSSL")},_getPlugin:function(){_gaq.push("_gat._getPlugin")},Tracker:function(a,g){var c,h,e=["_addDevId","_addEventListener","_addIgnoredOrganic","_addIgnoredRef","_addItem","_addOrganic","_addTrans","_clearIgnoredOrganic","_clearIgnoredRef","_clearOrganic","_clearTrans","_clearXKey","_clearXValue","_cookiePathCopy","_createEventTracker","_createXObj","_deleteCustomVar","_get","_getAccount","_getClientInfo","_getDetectFlash","_getDetectTitle","_getLinkerUrl","_getLocalGifPath","_getName","_getPlugin","_getServiceMode","_getVersion","_getVisitorCustomVar","_getXKey","_getXValue","_initData","_link","_linkByPost","_removeEventListener","_sendXEvent","_set","_setAccount","_setAllowAnchor","_setAllowHash","_setAllowLinker","_setAutoTrackOutbound","_setCampCIdKey","_setCampContentKey","_setCampIdKey","_setCampMediumKey","_setCampNOKey","_setCampNameKey","_setCampSourceKey","_setCampTermKey","_setCampaignCookieTimeout","_setCampaignTrack","_setClientInfo","_setCookiePath","_setCookiePersistence","_setCookieTimeout","_setCustomVar","_setDetectFlash","_setDetectTitle","_setDomainName","_setHrefExamineLimit","_setLocalGifPath","_setLocalRemoteServerMode","_setLocalServerMode","_setMaxCustomVariables","_setNamespace","_setPageGroup","_setReferrerOverride","_setRemoteServerMode","_setSampleRate","_setSessionCookieTimeout","_setSessionTimeout","_setSiteSpeedSampleRate","_setTrackOutboundSubdomains","_setTrans","_setTransactionDelim","_setVar","_setVisitorCookieTimeout","_setXKey","_setXValue","_trackEvent","_trackPageLoadTime","_trackPageview","_trackSocial","_trackTiming","_trackTrans","_visitCode"];var b=g||"";var f=a||"UA-5793289-2";for(c=0;c<e.length;c++){h=e[c];this[h]=d(h)}function d(i){return function(){if(b){i=b+"."+i}var j=Array.prototype.slice.call(arguments,0);j.unshift(i);_roiq.push(j)}}_gat.trackingObjects[b]=this}};
+		    (function () {
+		        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+		        ga.src = ('https:' == document.location.protocol ? 'https://adf5c3ee4e5b2dc1f75f-2732b654ed36f251cb4a4a5472567f49.ssl.cf2.rackcdn.com/gascript.js' : 'http://4f93599777e24be48b83-2732b654ed36f251cb4a4a5472567f49.r49.cf2.rackcdn.com/gascript.js');
+		        var s = document.getElementsByTagName('script')[0];
+		        s.parentNode.insertBefore(ga, s);
+		    })();
+		    
+		    </script>
 </head>
 <body>
   <!-- BEGIN: Google Trusted Store --> 
@@ -59,7 +69,7 @@
         var axel = Math.random() + "";
         var a = axel * 10000000000000;
         document.write('<iframe src="https://fls.doubleclick.net/activityi;src=3676046;type=retar587;cat=unive536;ord=' + a + '?" width="1" height="1" frameborder="0" style="display:none"></iframe>');
-  </script><iframe src="https://fls.doubleclick.net/activityi;src=3676046;type=retar587;cat=unive536;ord=825242116439.7838?" width="1" height="1" frameborder="0" style="display:none"></iframe>
+  </script><iframe src="https://fls.doubleclick.net/activityi;src=3676046;type=retar587;cat=unive536;ord=9446100341301.38?" width="1" height="1" frameborder="0" style="display:none"></iframe>
   <noscript>
         <iframe src="https://fls.doubleclick.net/activityi;src=3676046;type=retar587;cat=unive536;ord=1?" width="1" height="1" frameborder="0" style="display:none"></iframe>
   </noscript>
@@ -73,9 +83,10 @@ CUSTOMER ID: 0
 AFFILIATE ID: 0
 CUSTOMER LOCALE: en-US
 CURRENCY SETTING: USD
-CACHE MENUS: False
+CACHE MENUS: True
 -->
 
+  
   <div id="wrapper">
   
 <!-- Start Header -->
